--- a/clima.css
+++ b/clima.css
@@ -23,7 +23,8 @@ h1 {
      'Gluten', 'Kanit', sans-serif,'Oswald', sans-serif,
  'Rubik Iso', cursive;
 
-    color: #decece;
+ color: rgb(238,237,174);
+ color: radial-gradient(circle, rgba(238,237,174,0.2828054298642534) 0%, rgba(148,223,233,0.42307692307692313) 100%);
     margin-bottom: 20px;
 }
 
